graceful shutdown + scala 3.8.2